--- a/Front-end/CSS/death.css
+++ b/Front-end/CSS/death.css
@@ -1,6 +1,3 @@
-/* death.css */
-
-/* Reset some default browser styles */
 body, h2, blockquote, span, button {
     margin: 0;
     padding: 0;
@@ -57,11 +54,10 @@ button {
     padding: 12px 24px;
     cursor: pointer;
     font-size: 16px;
-    transition: background 0.3s, color 0.3s;
+    transition: background-color 0.3s, color 0.3s;
 }
 
 button:hover {
     background: #d76d77;
     color: #3a1c71;
 }
-
