--- a/Front-end/success/success.css
+++ b/Front-end/success/success.css
@@ -8,7 +8,7 @@
     font-family: 'Playwrite CL', cursive ;
 }
 body{
-    background: #7b8fef;
+    background-image: url('Stars.jpg');
 }
 .quote-box {
     background: #fff;
