--- a/Front-end/love/love.css
+++ b/Front-end/love/love.css
@@ -8,8 +8,7 @@
     font-family: 'Playwrite CL', cursive ;
 }
 body{
-    background: #7b8fef url('Stars.jpg') no-repeat center center fixed;
-    background-size: cover;
+    background: #7b8fef;
 }
 .quote-box {
     background: #fff;
