--- a/Front-end/landing-page/Eloquent-expressions.css
+++ b/Front-end/landing-page/Eloquent-expressions.css
@@ -1,6 +1,6 @@
 body {
-    font-family:Georgia, 'Times New Roman', Times, serif;
-    background-color:rgb(253, 250, 253);
+    font-family: Georgia, 'Times New Roman', Times, serif;
+    background-color: rgb(253, 250, 253);
     color: #333;
     margin: 0;
     padding: 0;
@@ -26,6 +26,7 @@ header h1 {
 nav ul {
     list-style-type: none;
     padding: 0;
+    text-align: center;
 }
 
 nav ul li {
@@ -40,7 +41,7 @@ nav ul li a {
 }
 
 nav ul li a:hover {
-    color: #8a4b8a
+    color: #8a4b8a;
 }
 
 section {
@@ -48,7 +49,33 @@ section {
 }
 
 section h2 {
-    color: #8a4b8a
+    color: #8a4b8a;
+}
+
+.category-list {
+    list-style-type: none;
+    padding: 0;
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 10px;
+}
+
+.category-list li {
+    margin: 10px 0;
+}
+
+.category-list li a {
+    text-decoration: none;
+    color: #333;
+    padding: 10px;
+    border-radius: 5px;
+    background-color: #f7e0d9;
+    transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.category-list li a:hover {
+    background-color: #8a4b8a;
+    color: #fff;
 }
 
 footer {
@@ -57,8 +84,9 @@ footer {
     padding: 10px 0;
     position: fixed; 
     bottom: 0;
-    width: 100%
+    width: 100%;
 }
+
 .center {
     display: block;
     margin-left: auto;
