--- a/Front-end/change.css
+++ b/Front-end/change.css
@@ -1,11 +1,11 @@
-@import url('https://fonts.googleapis.com/css2?family=Playwrite+BE+WAL:wght@100..400&family=Playwrite+CL:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap');
 
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Playwrite CL', cursive ;
+    font-family: 'IM fell English SC', serif;
 }
 body{
     background: #7b8fef;
