--- a/Front-end/change.css
+++ b/Front-end/change.css
@@ -8,7 +8,7 @@
     font-family: 'IM fell English SC', serif;
 }
 body{
-    background: #7b8fef;
+    background: #b2d145;
 }
 .quote-box {
     background: #fff;
