--- a/Front-end/education.css
+++ b/Front-end/education.css
@@ -1,14 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=Playwrite+BE+WAL:wght@100..400&family=Playwrite+CL:wght@100..400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Aclonica&display=swap');
 
 
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Playwrite CL', cursive ;
+    font-family: 'Aboreto', system-ui;
 }
 body{
-    background: #7b8fef;
+    background: #dd5373;
 }
 .quote-box {
     background: #fff;
