Making the font bolder

--- a/Front-end/forgiveness.css
+++ b/Front-end/forgiveness.css
@@ -6,7 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Almendra Display', serif;
+    font-family: 'Almendra Display Bold', serif, 
 }
 body{
     background: #3ccff8;
