--- a/Eloquent-expressions.css
+++ b/Eloquent-expressions.css
@@ -95,7 +95,7 @@ footer {
 
 #quoteoftheday a {
     text-decoration: none;
-    color: #333;
+    color: #2b2a2a;
     padding: 10px;
     border-radius: 5px;
     background-color: #f7e0d9;
