--- a/change.css
+++ b/change.css
@@ -10,7 +10,7 @@
 body{
     background-image: url('Change-background.jpg');
     background-size: cover;
-    background-position: center;
+    background-position: bottom;
     background-repeat: no-repeat;
 }
 .quote-box {
