--- a/death.css
+++ b/death.css
@@ -7,7 +7,10 @@
     font-family: 'Aladin', system-ui;
 }
 body{
-    background: #071354;
+    background-image: url('Death-background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 .quote-box {
     background: #fff;
