--- a/famous.css
+++ b/famous.css
@@ -8,7 +8,10 @@
     font-family: 'Allerta Stencil', sans-serif;
 }
 body{
-    background: #0a1b6f;
+    background-image: url('Famous-background.jpg');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
 }
 .quote-box {
     background: #fff;
