Removing the backgrounds and looking for better background images

--- a/famous.css
+++ b/famous.css
@@ -8,7 +8,7 @@
     font-family: 'Allerta Stencil', sans-serif;
 }
 body{
-    background-image: url('Famous-background.jpg');
+    background-image: url('');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
