--- a/friendship.css
+++ b/friendship.css
@@ -8,7 +8,7 @@
     font-family: 'Bad Script', cursive;
 }
 body{
-    background-image: url('Friendship-background.jpg');
+    background-image: url('');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
