--- a/change.css
+++ b/change.css
@@ -8,7 +8,7 @@
     font-family: 'IM fell English SC', serif;
 }
 body{
-    background-image: url('Change-background.jpg');
+    background-image: url('');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
