--- a/death.css
+++ b/death.css
@@ -7,7 +7,7 @@
     font-family: 'Aladin', system-ui;
 }
 body{
-    background-image: url('Death-background.jpg');
+    background-image: url('');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
