--- a/family.css
+++ b/family.css
@@ -8,7 +8,7 @@
     font-family: 'Alegreya SC', serif;
 }
 body{
-    background-image: url('Family-background.jpg');
+    background-image: url('');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
