--- a/health.css
+++ b/health.css
@@ -8,7 +8,7 @@
     font-family: 'Cinzel Decorative', serif;
 }
 body{
-    background-image: url('Health-background.jpg');
+    background-image: url('');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
