--- a/inspiration.css
+++ b/inspiration.css
@@ -8,7 +8,7 @@
     font-family:  'Emilys Candy', serif;
 }
 body{
-    background-image: url('Inspiration-backgrounds.jpg');
+    background-image: url('');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
