--- a/love.css
+++ b/love.css
@@ -9,7 +9,7 @@
     font-family:  'Jacques Francois Shadow', serif;
 }
 body{
-    background-image: url('Love-background.jpg');
+    background-image: url('');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
