Fixing the link to the educational image

--- a/education.css
+++ b/education.css
@@ -8,7 +8,7 @@
     font-family: 'Aboreto', system-ui;
 }
 body{
-    background-image: url('Education-background.jpg');
+    background-image: url('Images/Education-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
