Adding the backgrounds to the files

--- a/CSS/family.css
+++ b/CSS/family.css
@@ -8,7 +8,7 @@
     font-family: 'Alegreya SC', serif;
 }
 body{
-    background-image: url('');
+    background-image: url('Images/Family-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
