--- a/CSS/friendship.css
+++ b/CSS/friendship.css
@@ -8,7 +8,7 @@
     font-family: 'Bad Script', cursive;
 }
 body{
-    background-image: url('');
+    background-image: url('Images/Friendship-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
