--- a/CSS/happiness.css
+++ b/CSS/happiness.css
@@ -8,7 +8,7 @@
     font-family: 'Cherry Swash', serif;
 }
 body{
-    background-image: url('');
+    background-image: url('Images/Happiness-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
