--- a/CSS/inspiration.css
+++ b/CSS/inspiration.css
@@ -8,7 +8,7 @@
     font-family:  'Emilys Candy', serif;
 }
 body{
-    background-image: url('');
+    background-image: url('Images/Inspiration-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
