--- a/CSS/love.css
+++ b/CSS/love.css
@@ -9,7 +9,7 @@
     font-family:  'Jacques Francois Shadow', serif;
 }
 body{
-    background-image: url('');
+    background-image: url('Images/Love-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
