--- a/CSS/change.css
+++ b/CSS/change.css
@@ -8,7 +8,7 @@
     font-family: 'IM fell English SC', serif;
 }
 body{
-    background-image: url('');
+    background-image: url('Images/Change-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
