--- a/CSS/death.css
+++ b/CSS/death.css
@@ -7,7 +7,7 @@
     font-family: 'Aladin', system-ui;
 }
 body{
-    background-image: url('');
+    background-image: url('Images/Death-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
