--- a/CSS/famous.css
+++ b/CSS/famous.css
@@ -8,7 +8,7 @@
     font-family: 'Allerta Stencil', sans-serif;
 }
 body{
-    background-image: url('');
+    background-image: url('Images/Famous-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
