--- a/CSS/health.css
+++ b/CSS/health.css
@@ -8,7 +8,7 @@
     font-family: 'Cinzel Decorative', serif;
 }
 body{
-    background-image: url('');
+    background-image: url('Images/health-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
