--- a/CSS/success.css
+++ b/CSS/success.css
@@ -8,7 +8,7 @@
     font-family: 'Princess Sofia', cursive;
 }
 body{
-    background-image: url('');
+    background-image: url('Images/Success-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
