--- a/death.css
+++ b/death.css
@@ -1,19 +1,18 @@
-@import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Aclonica&family=Aladin&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap');
 
-* {
+
+*{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Aladin', system-ui;
+    font-family: 'IM fell English SC', serif;
 }
-
-body {
-    background-image: url('Images/Death-background.jpg');
+body{
+    background-image: url('Images/Change-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
-
 .quote-box {
     background: #fff;
     width: 700px;
@@ -28,14 +27,12 @@ body {
     0 20px 20px 10px rgba(0, 0, 0, 0.15),
     0 -20px 20px 10px rgba(0, 0, 0, 0.15);
 }
-
-.quote-box h2 {
+.quote-box h2{
     font-size: 32px;
     margin-bottom: 40px;
     position: relative;
 }
-
-.quote-box h2::after {
+.quote-box h2::after{
     content: '';
     width: 75px;
     height: 3px;
@@ -46,41 +43,36 @@ body {
     left: 50%;
     transform: translate(-50%);
 }
-
-.quote-box blockquote {
+.quote-box blockquote{
     font-size: 26px;
     min-height: 110px;
 }
-
-.quote-box blockquote::before, .quote-box blockquote::after {
+.quote-box blockquote::before, .quote-box blockquote::after{
     content: '"';
 }
-
-.quote-box span::before {
+.quote-box span::before{
     content: '';
     width: 20px;
     height: 2px;
-    background: #19599c;
+    background:#19599c;
     position: absolute;
     top: 50%;
     left: -30px;
 }
-
-.quote-box span {
+.quote-box span{
     display: block;
     margin-top: 10px;
     float: right;
     position: relative;
-}
 
-.quote-box div {
+}
+.quote-box div{
     width: 100%;
     margin-top: 50px;
-    display: flex;
+    display:flex;
     justify-content: center;
 }
-
-.quote-box button {
+.quote-box button{
     background: #f669c7;
     color: #fff;
     border-radius: 25px;
@@ -92,4 +84,9 @@ body {
     justify-content: center;
     margin: 5px;
     cursor: pointer;
+}
+.img {
+    display :block;
+    margin-left: auto;
+    margin-right: auto;
 }
