--- a/change.css
+++ b/change.css
@@ -4,12 +4,12 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Aboreto', system-ui;
+    font-family: 'IM Fell English SC', serif;
 }
 
 body {
     background-image: url('Images/Change-background.jpg');
-    background-size: cover;
+    background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
 }
