--- a/change.css
+++ b/change.css
@@ -9,7 +9,7 @@
 
 body {
     background-image: url('Images/Change-background.jpg');
-    background-size: contain;
+    background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
