Changing the background from change to the death background image

--- a/death.css
+++ b/death.css
@@ -8,7 +8,7 @@
     font-family: 'IM fell English SC', serif;
 }
 body{
-    background-image: url('Images/Change-background.jpg');
+    background-image: url('Images/Death-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
