--- a/CSS/change.css
+++ b/CSS/change.css
@@ -1,5 +1,8 @@
+/*Importing fonts from Google*/
+
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap');
 
+/*Applies style to all elements*/
 * {
     margin: 0;
     padding: 0;
@@ -7,6 +10,7 @@
     font-family: 'IM Fell English SC', serif;
 }
 
+/*Body styling*/
 body {
     background-image: url('Images/Change-background.jpg');
     background-size: cover;
@@ -14,6 +18,7 @@ body {
     background-repeat: no-repeat;
 }
 
+/*Styling for container*/
 .quote-box {
     background: #fff;
     width: 700px;
@@ -29,12 +34,14 @@ body {
     0 -20px 20px 10px rgba(0, 0, 0, 0.15);
 }
 
+/*Styling for header in container*/
 .quote-box h2 {
     font-size: 32px;
     margin-bottom: 40px;
     position: relative;
 }
 
+/*Styling psuedo-element after the header in the container*/
 .quote-box h2::after {
     content: '';
     width: 75px;
@@ -47,15 +54,18 @@ body {
     transform: translate(-50%);
 }
 
+/*Styling for blockquote*/
 .quote-box blockquote {
     font-size: 26px;
     min-height: 110px;
 }
 
+/*Styling for pseudo-elements before and after blockquote*/
 .quote-box blockquote::before, .quote-box blockquote::after {
     content: '"';
 }
 
+/*Styling for pseudo-element before the span inside the container*/
 .quote-box span::before {
     content: '';
     width: 20px;
@@ -66,6 +76,7 @@ body {
     left: -30px;
 }
 
+/*Styling for the span inside the container*/
 .quote-box span {
     display: block;
     margin-top: 10px;
@@ -73,6 +84,7 @@ body {
     position: relative;
 }
 
+/*Styling for the div inside the container*/
 .quote-box div {
     width: 100%;
     margin-top: 50px;
@@ -80,6 +92,7 @@ body {
     justify-content: center;
 }
 
+/*Styling for the button in container*/
 .quote-box button {
     background: #f669c7;
     color: #fff;
