--- a/CSS/friendship.css
+++ b/CSS/friendship.css
@@ -1,6 +1,7 @@
+/*Importing fonts from Google*/
 @import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Aclonica&family=Aladin&family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Allerta+Stencil&family=Almendra+Display&family=Bad+Script&display=swap');
 
-
+/*Applies style to all elements*/
 *{
     margin: 0;
     padding: 0;
