--- a/CSS/happiness.css
+++ b/CSS/happiness.css
@@ -1,18 +1,23 @@
+/*Importing fronts from Google*/
 @import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Aclonica&family=Aladin&family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Allerta+Stencil&family=Almendra+Display&family=Bad+Script&family=Cherry+Swash:wght@400;700&display=swap');
 
-
+/*Applies style to all elements*/
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Cherry Swash', serif;
 }
+
+/*Body styling*/
 body{
     background-image: url('Images/Happiness-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
+
+/*Styling for container*/
 .quote-box {
     background: #fff;
     width: 700px;
@@ -27,11 +32,15 @@ body{
     0 20px 20px 10px rgba(0, 0, 0, 0.15),
     0 -20px 20px 10px rgba(0, 0, 0, 0.15);
 }
+
+/*Styling for header in container*/
 .quote-box h2{
     font-size: 32px;
     margin-bottom: 40px;
     position: relative;
 }
+
+/*Styling psuedo-element after the header in the container*/
 .quote-box h2::after{
     content: '';
     width: 75px;
@@ -43,13 +52,19 @@ body{
     left: 50%;
     transform: translate(-50%);
 }
+
+/*Styling for blockquote*/
 .quote-box blockquote{
     font-size: 26px;
     min-height: 110px;
 }
+
+/*Styling for pseudo-elements before and after blockquote*/
 .quote-box blockquote::before, .quote-box blockquote::after{
     content: '"';
 }
+
+/*Styling for pseudo-element before the span inside the container*/
 .quote-box span::before{
     content: '';
     width: 20px;
@@ -59,6 +74,8 @@ body{
     top: 50%;
     left: -30px;
 }
+
+/*Styling for the span inside the container*/
 .quote-box span{
     display: block;
     margin-top: 10px;
@@ -66,12 +83,16 @@ body{
     position: relative;
 
 }
+
+/*Styling for the div inside the container*/
 .quote-box div{
     width: 100%;
     margin-top: 50px;
     display:flex;
     justify-content: center;
 }
+
+/*Styling for the button in container*/
 .quote-box button{
     background: #f669c7;
     color: #fff;
@@ -84,9 +105,4 @@ body{
     justify-content: center;
     margin: 5px;
     cursor: pointer;
-}
-.img {
-    display :block;
-    margin-left: auto;
-    margin-right: auto;
 }
