--- a/CSS/quote-daily.css
+++ b/CSS/quote-daily.css
@@ -1,15 +1,20 @@
+/*Importing fonts from Google*/
 @import url('https://fonts.googleapis.com/css2?family=Playwrite+BE+WAL:wght@100..400&family=Playwrite+CL:wght@100..400&display=swap');
 
-
+/*Applies style to all elements*/
 *{
     margin: 0;
     padding: 0;
     box-sizing: border-box;
     font-family: 'Playwrite CL', cursive ;
 }
+
+/*Body styling*/
 body{
     background: #7b8fef;
 }
+
+/*Styling for the container*/
 .quote-box {
     background: #fff;
     width: 700px;
@@ -24,11 +29,15 @@ body{
     0 20px 20px 10px rgba(0, 0, 0, 0.15),
     0 -20px 20px 10px rgba(0, 0, 0, 0.15);
 }
+
+/*Styling for header in the container*/
 .quote-box h2{
     font-size: 32px;
     margin-bottom: 40px;
     position: relative;
 }
+
+/*Styling psuedo-element after the header in the container*/
 .quote-box h2::after{
     content: '';
     width: 75px;
@@ -40,13 +49,19 @@ body{
     left: 50%;
     transform: translate(-50%);
 }
+
+/*Styling for bloackquote*/
 .quote-box blockquote{
     font-size: 26px;
     min-height: 110px;
 }
+
+/*Styling for pusedo-element before and after blockquote*/
 .quote-box blockquote::before, .quote-box blockquote::after{
     content: '"';
 }
+
+/*Styling for pusedo-element before the span in the container*/
 .quote-box span::before{
     content: '';
     width: 20px;
@@ -56,6 +71,8 @@ body{
     top: 50%;
     left: -30px;
 }
+
+/*Styling for the span inside the container*/
 .quote-box span{
     display: block;
     margin-top: 10px;
@@ -63,12 +80,15 @@ body{
     position: relative;
 
 }
+/*Styling for div inside the container*/
 .quote-box div{
     width: 100%;
     margin-top: 50px;
     display:flex;
     justify-content: center;
 }
+
+/*Styling for the button in container*/
 .quote-box button{
     background: #f669c7;
     color: #fff;
@@ -81,9 +101,4 @@ body{
     justify-content: center;
     margin: 5px;
     cursor: pointer;
-}
-.img {
-    display :block;
-    margin-left: auto;
-    margin-right: auto;
 }
