Trying to fix the references of the css and js

--- a/change.css
+++ b/change.css
@@ -12,7 +12,7 @@
 
 /*Body styling*/
 body {
-    background-image: url('Images/Change-background.jpg');
+    background-image: url('Change-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
