--- a/death.css
+++ b/death.css
@@ -11,7 +11,7 @@
 
 /*Body styling*/
 body{
-    background-image: url('Images/Death-background.jpg');
+    background-image: url('Death-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
