Fixing the references to the other files

--- a/education.css
+++ b/education.css
@@ -11,7 +11,7 @@
 
 /*Body styling*/
 body {
-    background-image: url('Images/Education-background.jpg');
+    background-image: url('Education-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
