--- a/famous.css
+++ b/famous.css
@@ -11,7 +11,7 @@
 
 /*Body styling*/
 body{
-    background-image: url('Images/Famous-background.jpg');
+    background-image: url('Famous-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
