--- a/success.css
+++ b/success.css
@@ -10,7 +10,7 @@
 }
 /*Body styling*/
 body{
-    background-image: url('Images/Success-background.jpg');
+    background-image: url('Success-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
