--- a/family.css
+++ b/family.css
@@ -11,7 +11,7 @@
 
 /*Body styling*/
 body{
-    background-image: url('Images/Family-background.jpg');
+    background-image: url('Family-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
