--- a/forgiveness.css
+++ b/forgiveness.css
@@ -11,7 +11,7 @@
 
 /*Body styling*/
 body{
-    background-image: url('Images/Forgiveness-background.jpg');
+    background-image: url('Forgiveness-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
