--- a/friendship.css
+++ b/friendship.css
@@ -11,7 +11,7 @@
 
 /*Body styling*/
 body{
-    background-image: url('Images/Friendship-background.jpg');
+    background-image: url('Friendship-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
