--- a/happiness.css
+++ b/happiness.css
@@ -11,7 +11,7 @@
 
 /*Body styling*/
 body{
-    background-image: url('Images/Happiness-background.jpg');
+    background-image: url('Happiness-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
