--- a/health.css
+++ b/health.css
@@ -11,7 +11,7 @@
 
 /*Body styling*/
 body{
-    background-image: url('Images/health-background.jpg');
+    background-image: url('health-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
