--- a/inspiration.css
+++ b/inspiration.css
@@ -11,7 +11,7 @@
 
 /*Body styling*/
 body{
-    background-image: url('Images/Inspiration-background.jpg');
+    background-image: url('Inspiration-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
