--- a/love.css
+++ b/love.css
@@ -12,7 +12,7 @@
 
 /*Body styling*/
 body{
-    background-image: url('Images/Love-background.jpg');
+    background-image: url('Love-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
