--- a/death.css
+++ b/death.css
@@ -1,23 +1,28 @@
-/*Importing fonts from Google*/
+/* Importing fonts from Google */
 @import url('https://fonts.googleapis.com/css2?family=IM+Fell+English+SC&display=swap');
 
-/*Applies style to all elements*/
-*{
+/* Applies style to all elements */
+* {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'IM fell English SC', serif;
+    font-family: 'IM Fell English SC', serif;
 }
 
-/*Body styling*/
-body{
+/* Ensure the html and body elements fill the viewport */
+html, body {
+    height: 100%;
+}
+
+/* Body styling */
+body {
     background-image: url('Death-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
 }
 
-/*Styling for container*/
+/* Styling for container */
 .quote-box {
     background: #fff;
     width: 700px;
@@ -28,20 +33,20 @@ body{
     padding: 40px;
     border-radius: 10px;
     text-align: center;
-    box-shadow:
-    0 20px 20px 10px rgba(0, 0, 0, 0.15),
-    0 -20px 20px 10px rgba(0, 0, 0, 0.15);
+    box-shadow: 
+        0 20px 20px 10px rgba(0, 0, 0, 0.15),
+        0 -20px 20px 10px rgba(0, 0, 0, 0.15);
 }
 
-/*Styling for header in container*/
-.quote-box h2{
+/* Styling for header in container */
+.quote-box h2 {
     font-size: 32px;
     margin-bottom: 40px;
     position: relative;
 }
 
-/*Styling for psuedo-element after the header in the container*/
-.quote-box h2::after{
+/* Styling for pseudo-element after the header in the container */
+.quote-box h2::after {
     content: '';
     width: 75px;
     height: 3px;
@@ -53,47 +58,46 @@ body{
     transform: translate(-50%);
 }
 
-/*Styling for blockquote*/
-.quote-box blockquote{
+/* Styling for blockquote */
+.quote-box blockquote {
     font-size: 26px;
     min-height: 110px;
 }
 
-/*Styling for psuedo-elements before and after blockquote*/
-.quote-box blockquote::before, .quote-box blockquote::after{
+/* Styling for pseudo-elements before and after blockquote */
+.quote-box blockquote::before, .quote-box blockquote::after {
     content: '"';
 }
 
-/*Styling for psuedo-elements before the span inside the container*/
-.quote-box span::before{
+/* Styling for pseudo-element before the span inside the container */
+.quote-box span::before {
     content: '';
     width: 20px;
     height: 2px;
-    background:#19599c;
+    background: #19599c;
     position: absolute;
     top: 50%;
     left: -30px;
 }
 
-/*Styling for the span inside the container*/
-.quote-box span{
+/* Styling for the span inside the container */
+.quote-box span {
     display: block;
     margin-top: 10px;
     float: right;
     position: relative;
-
 }
 
-/*Styling for the div inside the container*/
-.quote-box div{
+/* Styling for the div inside the container */
+.quote-box div {
     width: 100%;
     margin-top: 50px;
-    display:flex;
+    display: flex;
     justify-content: center;
 }
 
-/*Styling for the button in container*/
-.quote-box button{
+/* Styling for the button in container */
+.quote-box button {
     background: #f669c7;
     color: #fff;
     border-radius: 25px;
