--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /* Styling for the body */
 body {
     font-family: Arial, sans-serif;
-    background-image: url('9604897.jpg');
+    background-image: url('Landingpage-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
