--- a/happiness.css
+++ b/happiness.css
@@ -9,22 +9,26 @@
     font-family: 'Cherry Swash', serif;
 }
 
+/* Ensure html and body fill the viewport */
+html, body {
+    height: 100%;
+}
+
 /* Body styling */
 body {
     background-image: url('Happiness-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 /* Styling for container */
 .quote-box {
     background: #fff;
     width: 700px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
     padding: 40px;
     border-radius: 10px;
     text-align: center;
