--- a/hope.css
+++ b/hope.css
@@ -6,7 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Dokdo', system-ui;
+    font-family: 'Dokdo', system-ui, black;
 }
 
 /* Ensure html and body fill the viewport */
