--- a/change.css
+++ b/change.css
@@ -113,7 +113,7 @@ body {
 }
 
 .button:hover {
-    background-color: #0056b3;
+    background-color: #eb3bc5;
 }
 
 /* Styling for button specifically */
