--- a/inspiration.css
+++ b/inspiration.css
@@ -36,6 +36,22 @@ body {
         0 20px 20px 10px rgba(0, 0, 0, 0.15),
         0 -20px 20px 10px rgba(0, 0, 0, 0.15);
     position: relative;
+    overflow: hidden;
+}
+
+/* Styling for the home button */
+.home-button {
+    background: #f669c7;
+    color: #fff;
+    border: none;
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border-radius: 0 0 20px 0;
+    clip-path: polygon(0 0, 100% 0, 100% 100%);
+    cursor: pointer;
 }
 
 /* Styling for header in container */
@@ -112,16 +128,6 @@ body {
     cursor: pointer;
 }
 
-.home-button {
-    background: #3487d4;
-    color: #fff;
-    border: none;
-    width: 60px;
-    height: 60px;
-    position: absolute;
-    top: 10px;
-    right: 10px;
-    border-radius: 0 0 20px 0;
-    clip-path: polygon(0 0, 100% 0, 100% 100%);
-    cursor: pointer;
+.quote-box button:hover {
+    background: #f447a1;
 }
