--- a/hope.css
+++ b/hope.css
@@ -6,7 +6,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Mate", serif, black;
+    font-family: 'Emilys Candy', serif;
 }
 
 /* Ensure html and body fill the viewport */
@@ -16,7 +16,7 @@ html, body {
 
 /* Body styling */
 body {
-    background-image: url('Hope-background.jpg');
+    background-image: url('Inspiration-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -35,6 +35,23 @@ body {
     box-shadow: 
         0 20px 20px 10px rgba(0, 0, 0, 0.15),
         0 -20px 20px 10px rgba(0, 0, 0, 0.15);
+    position: relative;
+    overflow: hidden;
+}
+
+/* Styling for the home button */
+.home-button {
+    background: #f669c7;
+    color: #fff;
+    border: none;
+    width: 60px;
+    height: 60px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    border-radius: 0 0 20px 0;
+    clip-path: polygon(0 0, 100% 0, 100% 100%);
+    cursor: pointer;
 }
 
 /* Styling for header in container */
@@ -64,7 +81,7 @@ body {
 }
 
 /* Styling for pseudo-elements before and after blockquote */
-.quote-box blockquote::before, 
+.quote-box blockquote::before,
 .quote-box blockquote::after {
     content: '"';
 }
@@ -98,15 +115,19 @@ body {
 
 /* Styling for the button in container */
 .quote-box button {
-    background: #f669c7;
-    color: #fff;
+    background: #415ed3;
+    color: #000000;
     border-radius: 25px;
-    border: 1px solid #f669c7;
-    width: 250px;
+    border: 1px solid #69b7f6;
+    width: 50px;
     height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
     margin: 5px;
     cursor: pointer;
+}
+
+.quote-box button:hover {
+    background: #07bcea;
 }
