--- a/inspiration.css
+++ b/inspiration.css
@@ -116,10 +116,10 @@ body {
 /* Styling for the button in container */
 .quote-box button {
     background: #415ed3;
-    color: #f2e6e6;
+    color: #000000;
     border-radius: 25px;
     border: 1px solid #69b7f6;
-    width: 250px;
+    width: 50px;
     height: 50px;
     display: flex;
     align-items: center;
