Adding more information about the different sections

--- a/change.css
+++ b/change.css
@@ -115,7 +115,7 @@ body {
 
 /* Styling for the button in container */
 .quote-box button {
-    background: #e97da3;
+    background: #e66793;
     color: #030303;
     border-radius: 25px;
     border: 1px solid #69b7f6;
