Fixing the background images

--- a/happiness.css
+++ b/happiness.css
@@ -16,7 +16,7 @@ html, body {
 
 /* Body styling */
 body {
-    background-image: url('Inspiration-background.jpg');
+    background-image: url('Happiness-background.jpg');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
