--- a/hope.css
+++ b/hope.css
@@ -1,12 +1,12 @@
 /* Importing fonts from Google */
-@import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Aclonica&family=Aladin&family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Allerta+Stencil&family=Almendra+Display&family=Bad+Script&family=Cherry+Swash:wght@400;700&family=Cinzel+Decorative:wght@400;700;900&family=Dokdo&family=Emilys+Candy&family=Jacques+Francois+Shadow&family=Mate:ital@0;1&family=Princess+Sofia&family=Spirax&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Aboreto&family=Aclonica&family=Aladin&family=Alegreya+SC:ital,wght@0,400;0,500;0,700;0,800;0,900;1,400;1,500;1,700;1,800;1,900&family=Allerta+Stencil&family=Almendra+Display&family=Amita:wght@400;700&family=Bad+Script&family=Cherry+Swash:wght@400;700&family=Cinzel+Decorative:wght@400;700;900&family=Dokdo&family=Emilys+Candy&family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Handlee&family=Jacques+Francois+Shadow&family=Lumanosimo&family=Macondo&family=Mate:ital@0;1&family=Montez&family=Princess+Sofia&family=Sail&family=Sansita+Swashed:wght@300..900&family=Spirax&family=Stint+Ultra+Condensed&family=Tapestry&display=swap');
 
 /* Applies style to all elements */
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Emilys Candy', serif;
+    font-family: "Sail", system-ui;
 }
 
 /* Ensure html and body fill the viewport */
